--- a/RunDo/RunDoApp/templates/RunDoApp/updateprofile.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/updateprofile.html
@@ -5,7 +5,7 @@
 <form action="" method="post">
         {% csrf_token %}
     <div id="stats">
-          <h4 id="titles">Your Stats:</h4>
+          <h4 id="titles">Update Your Stats:</h4>
           <div class="form-group col-lg-2 col-md-2 col-sm-2">
             <label for=""></label>
             <input type="text" class="form-control" name="age" placeholder="Age">
