--- a/RunDo/RunDoApp/templates/RunDoApp/index.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/index.html
@@ -5,24 +5,37 @@
 <style>
 </style>
 
-<div class="container">
-    <a href="{%url 'RunDoApp:registration' %}">Create Account</a>
+<div class="container rundo">
+    <div class="row">
+        <div class="col">
+            <div id="intro">
+                <h1>Everybody has cheat days</h1>
+                <h4>Manage yours here</h4>
 
-    {% if user.is_authenticated == False %}
+            </div>
+        </div>
 
-        <form action="" method="post">
-            {% csrf_token %}
-              <div class="form-group">
-                <label id="homepagestuff" for="userName">User name</label>
-                <input  type="text" class="form-control col-md-6" name="user_name" aria-describedby="emailHelp" placeholder="Enter user name">
-              </div>
-              <div class="form-group">
-                <label id="homepagestuff" for="exampleInputPassword1">Password</label>
-                <input  type="password" class="form-control col-md-6" name="user_password" placeholder="Password">
-              </div>
-            <button type="submit" class="btn btn-secondary btn-md">Submit</button>
-        </form>
-    {% endif %}
+
+        <div class="col">
+
+            {% if user.is_authenticated == False %}
+
+                <form action="" method="post">
+                    {% csrf_token %}
+                      <div class="form-group">
+                        <label id="homepagestuff" for="userName">User name</label>
+                        <input  type="text" class="form-control col-md-6" name="user_name" aria-describedby="emailHelp" placeholder="Enter user name">
+                      </div>
+                      <div class="form-group">
+                        <label id="homepagestuff" for="exampleInputPassword1">Password</label>
+                        <input  type="password" class="form-control col-md-6" name="user_password" placeholder="Password">
+                      </div>
+                    <button type="submit" class="btn btn-secondary btn-md">Login</button>
+                    <a id="create_account" href="{%url 'RunDoApp:registration' %}">Create Account</a>
+                </form>
+            {% endif %}
+        </div>
+    </div>
 </div>
 
 {% endblock %}
