--- a/RunDo/RunDoApp/templates/RunDoApp/profile.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/profile.html
@@ -1,8 +1,8 @@
 {% extends 'RunDoApp/base.html' %}
 
 {% block content %}
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid rundo" style="margin-top: 15px">
+    <div class="row profile">
         <div class="col-sm-6 text-left list-group-item list-group-item-dark" id="">
         <h3>Your Stats:</h3>
             <div>Age: {{profile.age}}</div>
